--- a/src/post/post.css
+++ b/src/post/post.css
@@ -1,6 +1,9 @@
 .post{
     width: 375px;
     margin: 0px 25px 40px 25px;
+    background-color: #e0dbdb;
+    border-radius: 10px;
+    padding: 20px;
 }
 .postImg{
     width: 100%;
@@ -15,7 +18,7 @@
 }
 .postCat{
     font-size: 15px;
-    color: brown;
+    color: rgb(39, 114, 32);
     line-height: 20px;
     margin-top: 15px;
     margin-right: 10px;
@@ -37,4 +40,9 @@
     color: #444;
     line-height: 24px;
     margin-top: 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
