--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -1,8 +1,8 @@
 .sidebar{
     flex: 3;
     margin: 20px;
-    padding-bottom: 30px;
-    background-color: #fff;
+    padding: 20px;
+    background-color: #e0dbdb;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
